<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 BlissLabs

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
     <string name="app_name">Inputctl</string>
     <string name="app_summary">Manage input devices and tablet mode behavior</string>

     <string name="category_manual">Manual Control</string>
     <string name="menu_manual_blacklist_title">Blacklist devices</string>
     <string name="menu_manual_blacklist_summary">Permanently block unwanted input devices.</string>
     <string name="menu_kbd_sensor_title">Kbd Sensor Configuration</string>
     <string name="menu_kbd_sensor_summary">Map keyboard shortcuts to virtual device rotations.</string>
     <string name="kbd_sensor_config_add_device">Add Device</string>
     <string name="kbd_sensor_config_device_hint">Select an input device...</string>
     <string name="kbd_sensor_config_rot0">0° (Portrait Up)</string>
     <string name="kbd_sensor_config_rot90">90° (Landscape Left)</string>
     <string name="kbd_sensor_config_rot180">180° (Portrait Down)</string>
     <string name="kbd_sensor_config_rot270">270° (Landscape Right)</string>
     <string name="kbd_sensor_config_not_mapped">Not mapped</string>
     <string name="kbd_sensor_config_clear">Clear</string>
     <string name="kbd_sensor_config_capture_msg">Press up to 3 keys simultaneously, then release...</string>
     <string name="kbd_sensor_config_capture_title">Record Shortcut</string>
     <string name="kbd_sensor_info_summary">Map keyboard shortcuts to control the virtual accelerometer sensor. Select input devices below and assign key combinations for each rotation degree.</string>
     <string name="kbd_sensor_warning_summary">\u26a0\ufe0f This feature requires the Kbd Sensor HAL (sensors.kbd) to be loaded. If the HAL is not present, changes made here will have no effect.</string>
     <string name="kbd_sensor_config_add_device_title">Available Devices</string>
     <string name="kbd_sensor_config_configured_devices">Configured Devices</string>
     <string name="kbd_sensor_config_already_added">Already configured</string>
     <string name="kbd_sensor_config_tap_to_add">Tap to add this device</string>
     <string name="kbd_sensor_config_tap_to_remove">Tap to remove this device</string>
     <string name="kbd_sensor_config_remove_title">Remove device</string>
     <string name="kbd_sensor_config_remove_msg">Are you sure you want to remove \"%1$s\" from the kbd sensor configuration?</string>
     <string name="kbd_sensor_config_duplicate_shortcut">This shortcut is already assigned to another rotation!</string>
     <string name="manual_backlist_info_summary">Select the input devices you want to blacklist. Devices with a Tablet Mode switch or Power Button are protected to prevent system instability.</string>
     <string name="device_status_on">Active</string>
     <string name="device_status_off">Blacklisted</string>
     <string name="tablet_mode_warning">Warning: Device contains a Tablet Mode switch!</string>
     <string name="power_button_warning">Warning: Device contains a Power Button!</string>
     <string name="important_sensors_warning">Warning: Device contains several critical sensors!</string>

     <string name="tablet_mode_warning_title">WARNING! This device contains a Tablet Mode switch!</string>
     <string name="tablet_mode_warning_msg">Blacklist this input can make the device <b>unable to use the Tablet Mode functions</b>, are you sure you want to continue ?</string>
     <string name="power_button_warning_title">WARNING! This device contains a Power Button!</string>
     <string name="power_button_warning_msg">Blacklist this input can cause your device <b>unable to open power menu</b>, are you sure you want to continue ?</string>
     <string name="important_sensors_warning_title">WARNING! This device contains several critical sensors!</string>
     <string name="important_sensors_warning_msg">Blocking this input <b>may cause your device to malfunction</b>. Are you sure you want to proceed?</string>
     <string name="generic_blacklist_warning_title">Confirm device blocking</string>
     <string name="generic_blacklist_warning_msg">Are you sure you want to block device "%1$s" ?</string>

     <string name="category_automation">Automation</string>
     <string name="menu_tablet_mode_title">Tablet Mode Auto-Disable</string>
     <string name="menu_tablet_mode_summary">Automatically disable selected devices when folded (SW_TABLET_MODE).</string>
     <string name="tablet_mode_disable_info_summary">Select which devices (such as keyboard, touchpad) will be turned off when the system switches to Tablet mode.</string>
     <string name="tablet_mode_disable_status">System Status</string>
     <string name="tablet_mode_disable_status_title">Current Mode</string>
     <string name="tablet_mode_disable_status_summary">Checking sensors...</string>
     <string name="tablet_mode_folded">Tablet Mode (Folded)</string>
     <string name="laptop_mode_open">Laptop Mode (Open)</string>
     <string name="tablet_mode_input_blocked">Unable to select a device containing SW_TABLET_MODE !</string>
     <string name="toast_tablet_mode_disabled">Tablet Mode: Auto-disabled %1$d device(s)</string>
     <string name="toast_laptop_mode_enabled">Laptop Mode: Re-enabled %1$d device(s)</string>

     <string name="category_misc">Miscellaneous</string>
     <string name="menu_settings_title">Settings</string>
     <string name="menu_settings_toast_tablet_mode_title">Notification when folding the device</string>
     <string name="menu_settings_toast_tablet_mode_summary">Display a small Toast in the corner of the screen when the system automatically turns the input off/on due to folding the device.</string>
     <string name="menu_settings_blacklist_mode_title">Manual blocking mode</string>
     <string name="menu_settings_blacklist_mode_summary">Select the preferred mode to block devices</string>
     <string name="menu_settings_blacklist_mode_switch_title">Select the preferred mode to block devices</string>
     <string name="menu_settings_blacklist_mode_switch_msg">Switching modes will completely wipe your current block list. Are you sure you want to continue ?</string>
     <string name="menu_settings_blacklist_mode_switch_hardmode_extra_msg"><b>WARNING</b>: Because you are removing Hard Block, you will need to RESTART your device for the blocked inputs to reappear in the system.</string>
     <string name="soft_block_title">Soft Blocking (Immediate effect - Recommended)</string>
     <string name="hard_block_title">Hard Blocking (Removes from system - Requires reboot)</string>
     <string name="hard_blocked_device_list">Hard Blocked devices</string>
     <string name="hard_blocked_device_summary">Removed from system. Click to restore.</string>
     <string name="hard_blocked_device_restore_title">Restore device</string>
     <string name="hard_blocked_device_restore_summary">You will need to restart your device for this input to reappear. Continue ?</string>
     <string name="menu_settings_blacklist_safeguard_title">Ask before blocking</string>
     <string name="menu_settings_blacklist_safeguard_summary">Display a confirmation dialog each time you want to block a input to avoid accidental clicks.</string>
     <string name="safeguard_disable_warning_title">Turn off the protection ?</string>
     <string name="safeguard_disable_warning_msg">If you turn this off, inputs will be blocked IMMEDIATELY when you flip the switch. This could cause you to accidentally lock yourself out of control. Are you sure you want to turn it off?</string>

     <string name="category_about">About</string>
     <string name="about_inputctl_what">Inputctl is a sophisticated input hardware management tool.</string>
     <string name="about_inputctl_who">This is an open-source project by BlissLabs (https://blisslabs.org), released and protected under the Apache License 2.0.</string>
     <string name="about_inputctl_copyright">Copyright © 2026 BlissLabs. All rights reserved.</string>

     <string name="info">Information</string>
     <string name="device_list">Physical Input Devices</string>
     <string name="empty">Empty</string>
     <string name="restore">Restore</string>
     <string name="yes">OK</string>
     <string name="no">Cancel</string>
</resources>
