<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 BlissLabs

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_manual">
        <Preference
            android:key="pref_blacklist_mode_trigger"
            android:title="@string/menu_settings_blacklist_mode_title"
            android:summary="@string/menu_settings_blacklist_mode_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_automation">
        <SwitchPreference
            android:key="pref_tablet_mode_show_toast"
            android:title="@string/menu_settings_toast_tablet_mode_title"
            android:summary="@string/menu_settings_toast_tablet_mode_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
