<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 BlissLabs

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kbd_sensor_config_capture_msg"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_captured_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kbd_sensor_config_not_mapped"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:attr/colorAccent"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kbd_sensor_config_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="?android:attr/colorError" />

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>
